@@ -441,8 +441,8 @@ table.multipageimage td {
 
 .templatesUsed { margin-top: 1em; }
 
-/* Convenience links on Special:Ipblocklist */
-p.mw-ipb-conveniencelinks {
+/* Convenience links to edit block and delete reasons */
+p.mw-ipb-conveniencelinks, p.mw-filedelete-editreasons, p.mw-delete-editreasons {
 	font-size: 90%;
 	float: right;
 }
